--- a/src/components/ArchitectureShowcase/ArchitectureShowcase.css
+++ b/src/components/ArchitectureShowcase/ArchitectureShowcase.css
@@ -2,23 +2,24 @@
 
 .arch-container {
   color: #121212;
-  font-family: "Outfit", sans-serif;
+
   background-color: #F8F8F8;
- 
- 
+
+
 
 }
 
 .spacer {
   width: 100%;
- 
+
 }
 
 .arch {
   display: flex;
   gap: 60px;
   justify-content: space-between;
-  max-width: 1300px;
+  max-width: 90% !important;
+  margin-left: 5%;
   margin-inline: auto;
 }
 
@@ -38,6 +39,7 @@
 .arch__left .arch__info h2.header {
   font-family: "Helvetica Neue";
   font-size: 72px;
+
   font-weight: 500;
   letter-spacing: -0.84px;
   margin-bottom: 0;
@@ -60,6 +62,7 @@
   border-radius: 40px;
   display: flex;
   gap: 4px;
+  font-family: "Helvetica Neue";
   width: fit-content;
   align-items: center;
   transition: opacity 0.3s ease;
@@ -129,7 +132,7 @@
   .arch__right .img-wrapper {
     position: static;
     transform: none;
-    height:   360px;
+    height: 360px;
     width: 100%;
     margin-bottom: 20px;
   }
@@ -152,5 +155,13 @@
   .arch__right .img-wrapper {
     border-radius: 10px;
     height: 280px;
+  }
+
+  .arch__left .arch__info h2.header {
+    font-size: 48px;
+  }
+
+  .arch__left .arch__info p.desc {
+    font-size: 20px;
   }
 }
