--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,48 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Noyh';
+  src: url('./fonts/fonnts.com-noyh-bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Noyh';
+  src: url('./fonts/fonnts.com-noyh-heavy.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Noyh';
+  src: url('./fonts/fonnts.com-noyh-black.otf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Noyh';
+  src: url('./fonts/fonnts.com-noyh-thin.otf') format('opentype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Noyh';
+  src: url('./fonts/fonnts.com-noyh-light.otf') format('opentype');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Noyh';
+  src: url('./fonts/fonnts.com-noyh-light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+
 html,
 body {
   margin: 0;
@@ -65,7 +107,12 @@ body {
   color: #ffffff;
 }
 
-h1, h2, h3, h4, h5, h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 .title,
 .title2 {
   font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
@@ -78,6 +125,7 @@ code {
 
 /* Mobile navbar tweaks */
 @media (max-width: 768px) {
+
   /* Let navbar scroll with content on mobile so the collapsed menu
      pushes the hero section down instead of overlapping it */
   .navbar {
